--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -290,6 +290,9 @@ on post-fs-data
     # Camera sockets
     mkdir /data/misc/camera 0770 camera camera
 
+    # Start RIL daemon
+    start ril-daemon
+
 on fs
     mount_all /vendor/etc/fstab.qcom
     restorecon_recursive /persist
